fixing spacing issues

--- a/style.css
+++ b/style.css
@@ -474,7 +474,7 @@ body{
 .content-1 p{
   font-size: 2vh;
   padding:  0 30px;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   word-spacing: normal;
 }
 
@@ -507,7 +507,7 @@ body{
 .content-2 p{
   font-size: 2vh;
   padding:  0 30px;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   word-spacing: normal;
 }
 
@@ -537,7 +537,7 @@ body{
 .content-3 p{
   font-size: 2vh;
   padding:  0 30px;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   word-spacing: normal;
 }
 
@@ -568,7 +568,7 @@ body{
 .content-4 p{
   font-size: 2vh;
   padding:  0 30px;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   word-spacing: normal;
 }
 
@@ -599,7 +599,7 @@ body{
 .content-5 p{
   font-size: 2vh;
   padding:  0 30px;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   word-spacing: normal;
 }
 
